<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Dashboard">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/gradient">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="25dp"
                android:text="Shopping"
                android:textColor="@android:color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-80dp"
            android:columnCount="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/watch1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watch1Img"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/w1removebg" />

                    <TextView
                        android:id="@+id/watch1Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/watch1Img"
                        android:text="Fastrack B70"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/watch1OfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch1Title"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/watch1Img"
                        android:text="₹1,880"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch1Title"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="26dp"
                        android:layout_toEndOf="@+id/watch1OfferPrice"
                        android:text="@string/w1price"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/watch2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watch2Img"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/w2removebg" />


                    <TextView
                        android:id="@+id/watch2Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/watch2Img"
                        android:text="Citizen C60"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/watch2OfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch2Title"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/watch2Img"
                        android:text="₹16,720"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch2Title"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="26dp"
                        android:layout_toEndOf="@+id/watch2OfferPrice"
                        android:text="@string/w2price"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/watch3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watch3Img"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/w3removebg" />


                    <TextView
                        android:id="@+id/watch3Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/watch3Img"
                        android:text="Armani A10"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/watch3OfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch3Title"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/watch3Img"
                        android:text="₹25,995"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch3Title"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="26dp"
                        android:layout_toEndOf="@+id/watch3OfferPrice"
                        android:text="@string/w3price"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/watch4"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watch4Img"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:src="@drawable/titneremovebg" />


                    <TextView
                        android:id="@+id/watch4Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/watch4Img"
                        android:text="Triwa Falken"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/watch4OfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch4Title"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/watch4Img"
                        android:text="₹7,990"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch4Title"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="26dp"
                        android:layout_toEndOf="@+id/watch4OfferPrice"
                        android:text="@string/w4price"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/watch5"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:padding="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/watch5Img"
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="40dp"
                        android:src="@drawable/shopping" />


                    <TextView
                        android:id="@+id/watch5Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/watch5Img"
                        android:text="Apple Watch Series 5"
                        android:textColor="@color/black"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/watch5OfferPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch5Title"
                        android:layout_marginTop="15dp"
                        android:layout_toRightOf="@+id/watch5Img"
                        android:text="₹39,990"
                        android:textColor="@color/black"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/watch5Title"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="26dp"
                        android:layout_toEndOf="@+id/watch5OfferPrice"
                        android:text="@string/w5price"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </RelativeLayout>


            </androidx.cardview.widget.CardView>
        </GridLayout>


    </LinearLayout>

</ScrollView>